--- a/edgeCut/furniture.html
+++ b/edgeCut/furniture.html
@@ -19,14 +19,15 @@
 
 <body>
 
-    <div class="grid p-[10px] px-[16px] sm:px-[36px] md:px-[40px]">
+
+    <div class="grid p-[10px] px-[16px] sm:px-[36px] md:px-[46px]">
         <!-- navigation menu -->
         <div class="flex justify-between items-center ">
             <div class="flex justify-center items-center uppercase font-bold text-[24px]">edgecut</div>
             <div class="flex">
                 <div
                     class="flex justify-between items-center space-x-12 pr-[30px] uppercase text-[16px] hidden lg:block">
-                    <a href="./about.html">Home</a>
+                    <a href="./index.html">Home</a>
                     <a href="./about.html">about</a>
                     <a href="./furniture.html">Furniture</a>
                     <a href="./blog.html">Blog</a>
@@ -57,65 +58,8 @@
         </div>
 <!-- hamburger end -->
 
-        <!-- main division starts -->
-        <div
-            class="grid justify-center items-center bg-[#f9fafa] mt-[14px] leading-[40px] px-[26px] pb-[20px] sm:flex sm:space-x-6 ">
-
-            <!-- heading tag -->
-            <div class="sm:w-[40%]">
-                <div
-                    class="grid justify-start  w-full items-center uppercase text-[32px] font-bold mt-[18%] sm:text-[40px] sm:leading-[50px]">
-                    <div>
-                        <span class="text-start">for all your</span>
-                        <span>furniture</span>
-                    </div>
-                    <span>needs</span>
-                </div>
-                <!-- heading over -->
-
-                <!-- child heading starts -->
-                <div class="grid justify-center items-center py-[26px]">
-                    <div class="grid justify-start text-start  w-full items-center">
-                        <span class="text-start leading-[25px]">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores sabdsaa
-                            perspiciatis,
-                            illo maxime voluptatem a itaque suscipit.
-                        </span>
-                    </div>
-                </div>
-                <!-- child heading ends -->
-
-                <!-- main buttons starts -->
-                <div class="grid  items-center w-full space-y-3 sm:flex sm:space-y-0 sm:space-x-2.5">
-                    <div class="flex justify-center  items-center   text-white">
-                        <button
-                            class="bg-[#f89646] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#f89646] hover:border-[1px] hover:border-[#f89646] sm:w-[120px]">Contact
-                            Us</button>
-                    </div>
-                    <div class="flex justify-center  items-center  text-white">
-                        <button
-                            class="bg-[#6bb7be] flex justify-center transition duration-[0.3s] items-center h-[46px] w-full hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be] sm:w-[120px]">About
-                            Us</button>
-                    </div>
-                </div>
-            </div>
-            <!-- main buttons ends -->
-
-            <!-- image div starts -->
-            <div class="sm:w-[60%]">
-                <div class="grid justify-center items-center py-[50px]">
-                    <div class="flex justify-center items-center">
-                        <img src="./assets/images/menu_img.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <!-- image div ends -->
-        </div>
-        <!-- main division over -->
-
-
         <!-- our furniture section starts -->
-        <div class="grid py-[50px]">
+        <div class="grid py-[50px] bg-white ">
             <div class="grid justify-start items-center">
                 <h2 class="uppercase font-bold text-[32px]">our furniture</h1>
             </div>
@@ -130,8 +74,8 @@
 
 
         <!-- selling section starts -->
-        <div class="grid">
-            <div class="grid space-y-[46px] items-center ">
+        <div class="grid bg-white">
+            <div class="grid space-y-[46px] items-center bg-white">
                 <div class="grid sm:grid-cols-2 sm:gap-8 sm:gap-y-[50px] lg:grid-cols-3">
                     <!-- 1st -->
                     <div class="grid justify-center items-center  bg-[#f9fafa] ">
@@ -257,218 +201,9 @@
         </div>
         <!-- selling section ends -->
 
-        <!-- about us section starts -->
-        <div class="grid mt-[30px]">
-            <div
-                class="grid bg-[#f9fafa] w-full items-center space-y-[18px] py-[80px] px-[26px] sm:flex sm:space-x-6 sm:py-[80px] sm:space-y-0">
-                <div class="sm:w-[50%]">
-                    <div class="flex justify-center items-center ">
-                        <img src="./assets/images/about-img.png" alt="menu_imagea">
-                    </div>
-                </div>
-                <div class="sm:w-[50%] sm:space-y-4">
-                    <div class="flex text-[32px] font-bold pt-[22px] uppercase justify-start items-start sm:pt-[0px]">
-                        <span>about us</span>
-                    </div>
-                    <div class="flex justify-start items-center">
-                        <span class="text-[16px]">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur
-                            ipsam
-                            repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab
-                            est
-                            corporis tempore.
-                        </span>
-                    </div>
-                    <div class="flex justify-start items-center pt-[20px]">
-                        <button
-                            class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] sm:w-[176px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
-                            More</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- about us section starts -->
-
-        <!-- latest blog section starts -->
-        <div class="grid">
-            <div class="flex justify-center items-center text-[32px] uppercase font-bold pt-[80px] pb-[45px]">
-                <span>latest blog</span>
-            </div>
-            <div class="grid space-y-[60px] sm:grid-cols-2 sm:space-y-0 sm:gap-8 sm:gap-y-[50px] lg:grid-cols-3">
-                <!-- 1st blog -->
-                <div class="grid justify-center items-center shadow-md">
-                    <div class="flexjustify-center  items-center">
-                        <img src="./assets/images/b1.jpg" alt="" class="w-full">
-                    </div>
-                    <div class="grid justify-center  text-start items-center   px-[26px]">
-                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
-                            Look even slightly believable. If you are true lover
-                        </span>
-                        <span class="pt-[8px] text-[15px]">
-                            alteration in some form, by injected humour, or randomised words which don't look even
-                            slightly
-                            believable.
-                        </span>
-                        <div class="flex justify-start items-center py-[20px]">
-                            <button
-                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
-                                More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- 2nd blog -->
-                <div class="grid justify-center items-center shadow-md">
-                    <div class="flex justify-center  items-center">
-                        <img src="./assets/images/b2.jpg" alt="" class="w-full">
-                    </div>
-                    <div class="grid justify-center  text-start items-center   px-[26px]">
-                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
-                            Anything embarrassing hidden in the middle
-                        </span>
-                        <span class="pt-[8px] text-[15px]">
-                            alteration in some form, by injected humour, or randomised words which don't look even
-                            slightly
-                            believable.
-                        </span>
-                        <div class="flex justify-start items-center py-[20px]">
-                            <button
-                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
-                                More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- 3rd blog -->
-                <div class="grid justify-center items-center shadow-md">
-                    <div class="flexjustify-center  items-center">
-                        <img src="./assets/images/b3.jpg" alt="" class="w-full">
-                    </div>
-                    <div class="grid justify-center  text-start items-center   px-[26px]">
-                        <span class="leading-[24px] font-bold text-[20px] pt-[28px]">
-                            Molestias magni natus dolores odio commodi. Quaerat!
-                        </span>
-                        <span class="pt-[8px] text-[15px]">
-                            alteration in some form, by injected humour, or randomised words which don't look even
-                            slightly
-                            believable.
-                        </span>
-                        <div class="flex justify-start items-center py-[20px]">
-                            <button
-                                class="bg-[#6bb7be] flex text-white justify-center transition duration-[0.3s] items-center h-[46px] w-[146px] hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">Read
-                                More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- latest blog section ends -->
-
-        <!-- testimonial starts -->
-        <div class="grid ">
-            <div class="flex justify-center items-center uppercase text-[32px] font-bold pt-[80px] pb-[40px]">
-                <span>testimonial</span>
-            </div>
-            <div class="swiper mySwiper sm:px-[50px] ">
-                <div class="swiper-wrapper lg:h-[200px] ">
-                    <div
-                        class="swiper-slide grid justify-center items-center place-items-center shadow-2xl lg:flex lg:px-[20px] ">
-                        <div class="">
-                            <div
-                                class="h-[175px] w-[175px]  overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px] ">
-                                <img src="./assets/images/client.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid lg:justify-start lg:w-[400px]">
-                            <div
-                                class="flex justify-center items-center lg:justify-start lg:pl-[50px]  lg:justify-start ">
-                                <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
-                            </div>
-                            <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
-                                <span>
-                                    It is a long established fact that a reader will be
-                                    distracted by the readable cIt is a long established fact
-                                    that a reader will be distracted by the readable c
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 2nd -->
-                    <div
-                        class="swiper-slide grid justify-center items-center place-items-center shadow-2xl lg:flex lg:px-[20px] ">
-                        <div class="">
-                            <div
-                                class="h-[175px] w-[175px]  overflow-hidden border-[10px] rounded-full border-[#6bb7be] my-[36px] ">
-                                <img src="./assets/images/client.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid lg:justify-start lg:w-[400px]">
-                            <div
-                                class="flex justify-center items-center lg:justify-start lg:pl-[50px]  lg:justify-start ">
-                                <span class="h-[16px] w-[16px]"><i class="fa-solid fa-quote-left"></i></span>
-                            </div>
-                            <div class="flex justify-center items-center px-[26px] text-[16px] pt-[14px] pb-[40px]">
-                                <span>
-                                    It is a long established fact that a reader will be
-                                    distracted by the readable cIt is a long established fact
-                                    that a reader will be distracted by the readable c
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="flex  justify-center items-center space-x-2 mt-[30px]">
-                <div
-                    class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full left-swipe">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div
-                    class="flex justify-center items-center h-[45px] w-[45px] bg-[#6bb7be] text-white rounded-full right-swipe">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </div>
-            </div>
-        </div>
-        <!-- testimonial ends -->
-
-
-        <!-- contact us start -->
-        <div class="grid mt-[100px]">
-            <div class="grid bg-[#f9fafa] py-[20px] px-[26px] lg:px-[80px]">
-                <div class="sm:flex sm:space-x-6 sm:py-[80px]">
-                    <div class="grid space-y-6 sm:w-[50%] sm:space-y-0">
-                        <div
-                            class="flex justify-start items-center uppercase text-[32px] font-bold pt-[50px] pb-[40px] sm:pt-0 sm:pb-0 sm:items-start">
-                            <span>contact us</span>
-                        </div>
-                        <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]"
-                            placeholder="Your name">
-                        <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]"
-                            placeholder="Phone Number">
-                        <input type="text" class="h-[50px]  placeholder:text-black bg-white pl-[15px]"
-                            placeholder="Email">
-                        <input type="text" class="h-[120px] placeholder:text-black bg-white pl-[15px]"
-                            placeholder="Message">
-                        <div class="flex justify-start items-center">
-                            <button
-                                class="bg-[#6bb7be] flex justify-center text-white transition duration-[0.3s] items-center h-[49.6px] w-[151.9px]  hover:bg-white hover:text-[#6bb7be] hover:border-[1px] hover:border-[#6bb7be]">SEND</button>
-                        </div>
-                    </div>
-                    <div class="grid py-[50px] sm:w-[50%] sm:py-0 sm:pt-[14px]">
-                        <div class="flex justify-center items-center">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.75599290172!2d70.0642901748941!3d22.475801979560742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39576aa4921548a5%3A0x4a408202ee9ed820!2sNeo%20Square%2C%20Pandit%20Nehru%20Marg%2C%20Indradeep%20Society%2C%20Jamnagar%2C%20Gujarat%20361001!5e0!3m2!1sen!2sin!4v1699004615542!5m2!1sen!2sin"
-                                class="h-[500px] w-full" style="border:0;" allowfullscreen="true" loading="fast"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- contact us end -->
-
 
         <!-- footer starts -->
-        <div class="grid">
+        <div class="grid pt-[60px] ">
             <div class="grid justify-center items-center bg-[#191e1f] py-[60px] space-y-6">
                 <div class="grid  lg:w-full lg:flex  lg:justify-between lg:px-[60px] ">
                     <div class="grid justify-center text-center items-center text-white  space-y-1">
