1st page section 95% done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -35,19 +35,24 @@
         <!-- intro starts -->
         <div class="grid">
             <div class="bg-[#254f1a] grid px-[12px]">
-                <div class="grid justify-center items-center">
+                <div class="grid justify-center items-center pt-[128px]">
                     <div class="flex justify-center items-center rounded-3xl">
                         <img src="./assets/images/download.jfif" class="rounded-[30px]" alt="intro_image">
                     </div>
-                    <div class="grid justify-center text-center items-center uppercase font-bold ">
-                        <span class="text-[38.4px]">
+                    <div class="grid justify-center text-center items-center  font-bold text-[#d2dc1d] py-[30px] ">
+                        <span class="text-[38.4px] leading-[42px] ">
                             TikTok Social Media Influencer
                         </span>
                     </div>
-                    <div class="grid justify-center text-center items-center uppercase font-bold ">
-                        <span class="text-[38.4px]">
-                            TikTok Social Media Influencer
+                    <div class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px]">
+                        <span>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel
+                            nulla gravida pulvinar. Pellentesque habitant morbi tristique senectus et netus et
+                            malesuada fames ac turpis egestas.
                         </span>
+                    </div>
+                    <div class="flex  items-center">
+                        <input type="email" class="h-[70.8px] w-full rounded-[4px] placeholder:pl-[26px] placeholder:text-[20px]" placeholder="test@gmail.com">
                     </div>
                 </div>
             </div>
