inspect element is more useful 2nd page 30% donr

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -51,13 +51,30 @@
                             malesuada fames ac turpis egestas.
                         </span>
                     </div>
-                    <div class="flex  items-center">
-                        <input type="email" class="h-[70.8px] w-full rounded-[4px] placeholder:pl-[26px] placeholder:text-[20px]" placeholder="test@gmail.com">
+                    <div class="flex  items-center ">
+                        <input type="email" class="h-[70.8px] w-full rounded-[8px] placeholder:pl-[26px] placeholder:text-[20px]" placeholder="test@gmail.com">
+                    </div>
+                    <div class="flex justify-center items-center py-[16px] pb-[128px]">
+                        <button class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
+                            Get Started
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
         <!-- intro ends -->
+
+
+        <!-- 2nd page  -->
+        <div class="grid">
+            <div class="bg-white grid justify-center items-center py-[96px]">
+                <div class="grid  items-center ">
+                    <div class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold">
+                        <span>Become an influencer</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- over -->
 </body>
