--- a/influencer/index.html
+++ b/influencer/index.html
@@ -44,7 +44,8 @@
                             TikTok Social Media Influencer
                         </span>
                     </div>
-                    <div class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px]">
+                    <div
+                        class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px]">
                         <span>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel
                             nulla gravida pulvinar. Pellentesque habitant morbi tristique senectus et netus et
@@ -52,10 +53,13 @@
                         </span>
                     </div>
                     <div class="flex  items-center ">
-                        <input type="email" class="h-[70.8px] w-full rounded-[8px] placeholder:pl-[26px] placeholder:text-[20px]" placeholder="test@gmail.com">
+                        <input type="email"
+                            class="h-[70.8px] w-full rounded-[8px] placeholder:pl-[26px] placeholder:text-[20px]"
+                            placeholder="test@gmail.com">
                     </div>
                     <div class="flex justify-center items-center py-[16px] pb-[128px]">
-                        <button class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
+                        <button
+                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
                             Get Started
                         </button>
                     </div>
@@ -66,11 +70,33 @@
 
 
         <!-- 2nd page  -->
-        <div class="grid">
-            <div class="bg-white grid justify-center items-center py-[96px]">
+        <div class="grid ">
+            <div class="bg-[#f3f3f1] grid justify-center items-center py-[96px]">
                 <div class="grid  items-center ">
                     <div class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold">
                         <span>Become an influencer</span>
+                    </div>
+                    <div class="flex justify-center items-center py-[40px] ">
+                        <button
+                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
+                            Get Started
+                        </button>
+                    </div>
+
+
+                    <!-- 1st photo -->
+                    <div class="grid px-[12px]">
+                        <div class="flex  items-center bg-white rounded-[30px] p-[16px]">
+                            <div class="grid justify-center items-center bg-cover">
+                                <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px]">
+                                <div class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
+                                    <p class="pt-[18px]">
+                                        Lorem ipsum dolor sit amet, consectetur
+                                        adipiscing elit habitant turpis .
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
