creater meeting section done

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -156,6 +156,53 @@
                 </div>
             </div>
         </div>
+
+        <!-- creator meeting page starts -->
+        <div class="grid bg-[#f3f3f1]">
+            <div class="grid items-center px-[12px] pt-[5rem]">
+                <div class="flex justify-center items-center">
+                    <p class="text-[32.8px] font-bold">Creator meeting</p>
+                </div>
+                <div>
+                    <div class="flex justify-center items-center pt-[48px] overflow-hidden  ">
+                        <img src="./assets/images/features2.jpg" alt="" class="rounded-[160px] h-[400px] ">
+                    </div>
+                    <div class="grid justify-center items-center space-y-[12px] py-[32px]">
+                        <div class="flex justify-center items-center text-[#353535] text-[18.24px]">
+                            <span>Creators</span>
+                        </div>
+                        <div
+                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center">
+                            <span>Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit. Donec egestas massa vel nulla gravida pulvinar.</span>
+                        </div>
+                        <div class="flex justify-center items-center text-[17.12px] text-[#353535]">
+                            <span>20 may, 20 min</span>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="flex justify-center items-center pt-[48px] overflow-hidden  ">
+                        <img src="./assets/images/features1.jpg" alt="" class="rounded-[32px] h-[400px] ">
+                    </div>
+                    <div class="grid justify-center items-center space-y-[12px] py-[32px]">
+                        <div class="flex justify-center items-center text-[#353535] text-[18.24px]">
+                            <span>Promotion</span>
+                        </div>
+                        <div
+                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center">
+                            <span>Lorem ipsum dolor sit amet,
+                                adipiscing elit. </span>
+                        </div>
+                        <div class="flex justify-center items-center text-[17.12px] text-[#353535]">
+                            <span>23 may, 17 min</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- creator meeting page ends -->
     </div>
     <!-- over -->
 </body>
