--- a/influencer/index.html
+++ b/influencer/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>EdgeCut</title>
-    <link rel="icon" href="./assets/images/f6.png">
+    <title>Influencer</title>
+    <link rel="icon" href="./assets/images/features2.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
